--- a/api_msgs/package.xml
+++ b/api_msgs/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>api_msgs</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="hyojun@todo.todo">hyojun</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Package defining ROS 2 messages for communication with HD Hyundai Robotics robot.</description>
+  <maintainer email="kwon.hyojun@hd.com">hyojun</maintainer>
+  <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
